--- a/plugins/IdeaVim/README
+++ b/plugins/IdeaVim/README
@@ -2,15 +2,15 @@ IdeaVim
 =======
 
 <div>
-  <a href="http://teamcity.jetbrains.com/viewType.html?buildTypeId=bt299&guest=1">
-    <img src="http://teamcity.jetbrains.com/app/rest/builds/buildType:(id:bt299)/statusIcon"/>
+  <a href="http://teamcity.jetbrains.com/viewType.html?buildTypeId=IdeaVim_Build&guest=1">
+    <img src="http://teamcity.jetbrains.com/app/rest/builds/buildType:(id:IdeaVim_Build)/statusIcon"/>
   </a>
   <span>Build<span>
 </div>
 
 <div>
-  <a href="http://teamcity.jetbrains.com/viewType.html?buildTypeId=bt453&guest=1">
-    <img src="http://teamcity.jetbrains.com/app/rest/builds/buildType:(id:bt453)/statusIcon"/>
+  <a href="http://teamcity.jetbrains.com/viewType.html?buildTypeId=IdeaVim_TestsForIntelliJ15&guest=1">
+    <img src="http://teamcity.jetbrains.com/app/rest/builds/buildType:(id:IdeaVim_TestsForIntelliJ15)/statusIcon"/>
   </a>
   <span>Tests</span>
 </div>
