--- a/plugins/IdeaVim/CHANGES
+++ b/plugins/IdeaVim/CHANGES
@@ -3,6 +3,32 @@ The Changelog
 
 History of changes in IdeaVim for the IntelliJ platform.
 
+0.44, 2015-11-02
+----------------
+
+A bugfix release.
+
+
+* VIM-1040 Fixed typing keys in completion menus and typing with the
+  plugin disabled
+
+
+0.43, 2015-11-02
+----------------
+
+A bugfix release.
+
+* VIM-1039 Fixed running the plugin with Java 6
+
+
+0.42, 2015-11-01
+----------------
+
+This release is compatible with IntelliJ 15+ and other IDEs based on the
+IntelliJ platform branch 143+.
+
+* VIM-970 Fixed move commands in read-only files
+
 
 0.41, 2015-06-10
 ----------------
